--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
     pg_shard1:
         image: postgres:15
@@ -48,3 +46,36 @@ services:
             - "5436:5432"
         volumes:
             - ./shard4:/docker-entrypoint-initdb.d
+
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: pgadmin
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+        ports:
+            - "5050:80"
+        depends_on:
+            - pg_shard1
+            - pg_shard2
+            - pg_shard3
+            - pg_shard4
+
+    grafana:
+        image: grafana/grafana-oss
+        container_name: grafana
+        ports:
+            - "3000:3000"
+        environment:
+            - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+            - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+        depends_on:
+            - pg_shard1
+            - pg_shard2
+            - pg_shard3
+            - pg_shard4
+        volumes:
+            - grafana-storage:/var/lib/grafana
+
+volumes:
+    grafana-storage:
